test autobuil docker

--- a/src/main/resources/templates/addPerson.html
+++ b/src/main/resources/templates/addPerson.html
@@ -22,6 +22,8 @@
     Last Name:
     <input type="text" th:field="*{lastName}" />
     <br/>
+    <input type="text" th:field="*{phone}" />
+    <br/>
     <input type="submit" value="Create" />
 </form>
 
