--- a/src/main/resources/templates/personList.html
+++ b/src/main/resources/templates/personList.html
@@ -1,7 +1,6 @@
-
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8"/>
     <title>Person List</title>
     <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}"/>
 </head>
@@ -14,10 +13,12 @@
         <tr>
             <th>First Name</th>
             <th>Last Name</th>
+            <th>Phone</th>
         </tr>
-        <tr th:each ="person : ${persons}">
+        <tr th:each="person : ${persons}">
             <td th:utext="${person.firstName}">...</td>
             <td th:utext="${person.lastName}">...</td>
+            <td th:utext="${person.phone}">...</td>
         </tr>
     </table>
 </div>
